edit swagger and unit tests
